--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,15 +32,11 @@
   
   网页可能无法打开/打开很卡，按下面方法操作可改善浏览体验：</br>
 
-1.复制链接到【浏览器】打开。
+1.复制链接到【浏览器】打开，即可下载“小明VPN”。
 
-<a href= "https://m.baidu.com/paw/c/s/m.qqtn.com/mipq/326515.html">https://m.baidu.com/paw/c/s/m.qqtn.com/mipq/326515.html</a></br>
+<a href= "https://kexueshangwang01.github.io/xiaoming-2.0.1_gt.apk">https://https://kexueshangwang01.github.io/xiaoming-2.0.1_gt.apk</a></br>
 
-2.点击“立即下载”，下载“APKPure”。</br>
-
-3.在APKPure里搜索“KeyVPN”软件，下载。或搜索VPN，尝试其他高评分软件。</br>
-
-4.下载完成后打开“keyVPN”，点击圆形开机按钮，当显示“已连接”时即可顺畅访问官网。</br>
+2.下载完成后打开“小明VPN”，点击圆形开机按钮，当显示“对勾”符号时即可顺畅访问官网。</br>
 
 </p>
 
